@@ -9,7 +9,8 @@ graalvmNative {
                 "--no-fallback",
                 "-H:+ReportExceptionStackTraces",
                 "-H:IncludeLocales=en",
-                "--enable-all-security-services"
+                "--enable-all-security-services",
+                "--enable-native-access=ALL-UNNAMED"
             )
         }
     }
